-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.2
-
None
-
-
29b076d61 (dev), 7864c01c7 (6.6), 78f628971 (tqtc/lts-6.2), 2e8a0b096 (6.5), bedacaec1 (tqtc/lts-5.15)
This appears to a regression of https://bugreports.qt.io/browse/QTBUG-55558
Qt sets window type NET_WM_TYPE_NORMAL on context menus.
Steps to reproduce:
1. Open a Qt 6 based application (I used qutebrowser).
2. right click to open the context menu
3. get xprop of the menu
For the last 2 steps, what I did is to first run
sleep 2 && xdotool search --name --onlyvisible '.*' | xargs -L 1 xprop -id
And then open the context window within 2 seconds, and find the xprop output corresponding to the window by looking at the dimensions.
The bug is found by the discussion here: https://github.com/qutebrowser/qutebrowser/issues/7856
- resulted from
-
QTBUG-39887 Regression bug: QWidget::setAttribute() does not set Qt::WA_X11NetWmWindowType in Qt 5.
-
- Closed
-
For Gerrit Dashboard: QTBUG-116696 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
501884,2 | widget: set WA_X11NetWmWindowType* after xcb window was created | dev | qt/qtbase | Status: MERGED | +2 | 0 |
502016,2 | widget: set WA_X11NetWmWindowType* after xcb window was created | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
502017,2 | widget: set WA_X11NetWmWindowType* after xcb window was created | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
502020,2 | widget: set WA_X11NetWmWindowType* after xcb window was created | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
502041,2 | widget: set WA_X11NetWmWindowType* after xcb window was created | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |