widget: set WA_X11NetWmWindowType* after xcb window was created

This amends 17d68c4fc371c32bd58d0a94ac63f0170edaf29e.

Fixes: QTBUG-116696
Task-number: QTBUG-39887
Change-Id: Idf385bcbeb630ddfc51b39b2af35da3ab94b07c0
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit 29b076d6143f8a4aede72c176efcc40e5b7d701e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>